# unity-mcp

./: .gitignore  LICENSE  README.md  unity_mcp_client.py
UnityMcpServer/src/: .dockerignore  Dockerfile  README.docker.md  config.py  exceptions.py  pyproject.toml  serialization_utils.py  server.py  type_converters.py  unity_connection.py  validation_utils.py
UnityMcpServer/src/tests/: __init__.py  conftest.py  test_base_tool.py  test_cross_tool_consistency.py  test_documentation.py  test_execute_menu_item.py  test_gameobject_reference_formats.py  test_gameobject_validation.py  test_integration_validation.py  test_manage_asset.py  test_manage_editor.py  test_manage_gameobject.py  test_manage_prefabs.py  test_manage_scene.py  test_manage_script.py  test_parameter_documentation.py  test_parameter_format.py  test_read_console.py  test_script_tool_parameters.py  test_serialization_advanced.py  test_serialization_utils.py  test_type_converters.py  test_validation_improvements.py
UnityMcpServer/src/tools/: __init__.py  base_tool.py  execute_menu_item.py  game_object_management.py  introspection_tool.py  manage_asset.py  manage_assets.py  manage_editor.py  manage_gameobject.py  manage_prefabs.py  manage_scene.py  manage_script.py  read_console.py  scene_management.py  validation_layer.py
UnityMcpServer/src/unity_backend_tests/: __init__.py  conftest.py  run_unity_tests.py  test_asset_operations.py  test_editor_operations.py  test_gameobject_operations.py  test_gameobject_references.py  test_introspection_integration.py  test_parameter_validation.py  (+4 more)
(+48 files in other folders)
