[project]
name = "UnityMcpServer"
version = "2.0.0"
description = "Unity MCP Server: A Unity package for Unity Editor integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.2", "mcp[cli]>=1.4.1", "pytest>=8.3.0"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "server", "unity_connection"]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
